Updated Level Blueprint

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -25,6 +25,7 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@PET-SAMACO
 LastExecutedLaunchName=PET-SAMACO
+LaunchConfiguration=LaunchConfig_Default
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 CurrentPosGridSize=0
@@ -98,7 +99,9 @@ LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 LastLogListing=FBXImport
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/FirstPersonBP/Maps/FirstPersonExampleMap.FirstPersonExampleMap:PersistentLevel.FirstPersonExampleMap
+OpenAssetsAtExit=/Game/TrashTrigger_Blueprint.TrashTrigger_Blueprint
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -538,15 +541,15 @@ REINST_TrashTrigger_Blueprint_C_94.Actor=True
 PostProcessVolume=Object.PostProcessVolume" "Object.BrushBuilder.BrushBuilder.Object.BrushSettings
 Volume=Object.PostProcessVolume" "Object.BrushBuilder.BrushBuilder.Object.BrushSettings
 Brush=Object.PostProcessVolume" "Object.BrushBuilder.BrushBuilder.Object.BrushSettings
-StaticMeshActor=Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings
+StaticMeshActor="Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings" 
 PointLight=Object.Light.LightComponent.Object.Light.LightColor
-Light=Object.Light.LightComponent.Object.Light.LightColor
+Light="Object.Light.LightComponent.Object.Light.LightColor" 
 DirectionalLight=Object.Light.LightComponent.Object.Light.LightColor
 Cube133_Blueprint_C=Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings
 TrashCan_Blueprint_C=Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings
-SpotLight=Object.Light.LightComponent.Object.Light.LightColor
+SpotLight="Object.Light.LightComponent.Object.Light.LightColor" 
 SpotLight_Blueprint_C=Object.Light.LightComponent.Object.Light.LightColor
-TrashLight_Blueprint_C=Object.Light.LightComponent.Object.Light.LightColor
+TrashLight_Blueprint_C="Object.Light.LightComponent.Object.Light.LightColor" 
 REINST_TrashLight_Blueprint_C_395=Object.Light.LightComponent.Object.Light.LightColor
 
 [PlacementMode]
