--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -1,6 +1,6 @@
 [Core.System]
 Paths=../../../Engine/Content
-Paths=../../../../../../UnrealProjects/ThesisTemplate/Content
+Paths=../../../../../../Users/Japheth Samaco/Documents/Unreal Projects/ThesisTemplate1/Content
 Paths=../../../Engine/Plugins/2D/Paper2D/Content
 Paths=../../../Engine/Plugins/Runtime/LeapMotionController/Content
 
